tests/spec/emit/snapshots/interop_direct_prelude_fold_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:math"
  
  fn main() {
    let xs: Slice<float64> = [1.0, 5.0]
    let biggest = xs.fold(0.0, math.Max)
    let _ = biggest
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"math"
)

func main() {
	xs := []float64{1.0, 5.0}
	biggest := lisette.SliceFold(xs, 0.0, math.Max)
	_ = biggest
}
