tests/spec/emit/snapshots/interop_discarded_collection_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "\nimport \"go:example.com/aws\"\n\nfn main() {\n  aws.Make()\n}\n"
---
package main

import "example.com/aws"

func main() {
	aws.Make()
}
