tests/spec/emit/snapshots/interop_err_sentinel_pattern.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:bufio"
  import "go:fmt"
  import "go:io"
  import "go:os"
  
  fn main() {
    let mut reader = bufio.NewReader(os.Stdin)
    while true {
      let r = match reader.ReadRune() {
        Ok((r, _)) => r,
        Err(io.EOF) => break,
        Err(_) => panic("error"),
      }
      fmt.Printf("%c", r)
    }
  }
---
package main

import (
	"bufio"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"io"
	"os"
)

func main() {
	reader := bufio.NewReader(os.Stdin)
	for {
		var r rune
		ret, ret_1, ret_2 := reader.ReadRune()
		tup := lisette.MakeTuple2(ret, ret_1)
		var result lisette.Result[lisette.Tuple2[rune, int], error]
		if ret_2 != nil {
			result = lisette.MakeResultErr[lisette.Tuple2[rune, int], error](ret_2)
		} else {
			result = lisette.MakeResultOk[lisette.Tuple2[rune, int], error](tup)
		}
		if result.Tag == lisette.ResultOk {
			r = result.OkVal.First
		} else {
			if result.ErrVal == io.EOF {
				break
			}
			panic("error")
		}
		fmt.Printf("%c", r)
	}
}
