tests/spec/emit/snapshots/interop_flattened_result_tuple_tail_repackages_payload.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/multi"
  
  fn load() -> Result<(string, int), error> {
    multi.Load()
  }
---
package main

import (
	"example.com/multi"
	lisette "github.com/ivov/lisette/prelude"
)

func load() (lisette.Tuple2[string, int], error) {
	ret, ret_1, ret_2 := multi.Load()
	tup := lisette.MakeTuple2(ret, ret_1)
	var result lisette.Result[lisette.Tuple2[string, int], error]
	if ret_2 != nil {
		result = lisette.MakeResultErr[lisette.Tuple2[string, int], error](ret_2)
	} else {
		result = lisette.MakeResultOk[lisette.Tuple2[string, int], error](tup)
	}
	if result.Tag == lisette.ResultOk {
		return result.OkVal, nil
	}
	return lisette.Tuple2[string, int]{}, result.ErrVal
}
