tests/spec/emit/snapshots/interop_fn_arg_nested_option_slice.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    aws.Use(Some([Some("hi"), None]))
    aws.Use(None)
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	src := []lisette.Option[string]{
		lisette.MakeOptionSome("hi"),
		lisette.MakeOptionNone[string](),
	}
	unwrapped := make([]*string, len(src))
	for i, v := range src {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = &v.SomeVal
		} else {
			unwrapped[i] = nil
		}
	}
	var ptr []*string = unwrapped
	aws.Use(&ptr)
	aws.Use(nil)
}
