tests/spec/emit/snapshots/interop_fn_arg_slice_option_string.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    aws.Use([Some("hi"), None])
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	src := []lisette.Option[string]{
		lisette.MakeOptionSome("hi"),
		lisette.MakeOptionNone[string](),
	}
	unwrapped := make([]*string, len(src))
	for i, v := range src {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = &v.SomeVal
		} else {
			unwrapped[i] = nil
		}
	}
	aws.Use(unwrapped)
}
