tests/spec/emit/snapshots/interop_fn_arg_spread_variadic_option_pointer.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let n = aws.Node { .. }
    let xs = [Some(&n), None]
    aws.Use(xs...)
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	n := aws.Node{}
	xs := []lisette.Option[*aws.Node]{
		lisette.MakeOptionSome(&n),
		lisette.MakeOptionNone[*aws.Node](),
	}
	unwrapped := make([]*aws.Node, len(xs))
	for i, v := range xs {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	aws.Use(unwrapped...)
}
