tests/spec/emit/snapshots/interop_fn_arg_variadic_option_pointer.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let n = aws.Node { .. }
    aws.Use(Some(&n), None)
  }
---
package main

import "example.com/aws"

func main() {
	n := aws.Node{}
	aws.Use(&n, nil)
}
