tests/spec/emit/snapshots/interop_fn_return_slice_option_string.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    for x in aws.Make() {
      match x {
        Some(v) => { let _ = v },
        None => {},
      }
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	src := aws.Make()
	wrapped := make([]lisette.Option[string], len(src))
	for i, v := range src {
		if v != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	for _, x := range wrapped {
		if x.Tag == lisette.OptionSome {
			_ = x.SomeVal
		}
	}
}
